--- a/cafe/index.html
+++ b/cafe/index.html
@@ -314,7 +314,7 @@
           
             <input class="form" type="text" placeholder="Name" aria-label="default input example"><br>
        <input class="form" type="email" placeholder="Email" aria-label="default input example"><br>
-       <input class="form" type="number" placeholder="Number" aria-label="default input example"><br>
+       <input class="form" type="text" placeholder="Text" aria-label="default input example"><br>
        <button class="contactbtn" id="contactbtn">Send Message</button>
       </div>
     </div>
