--- a/Portfolio-Kanisha/index.html
+++ b/Portfolio-Kanisha/index.html
@@ -62,7 +62,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:kanisha@example.com" class="contact-link">kanisha@example.com</a>
+              <a href="mailto:kanisha@example.com" class="contact-link">kanishabhojak@gmail.com</a>
             </div>
 
           </li>
@@ -76,7 +76,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+10000000000" class="contact-link">+1 (000) 000-0000</a>
+              <a href="tel:+10000000000" class="contact-link">+1 (000)000-0000</a>
             </div>
 
           </li>
@@ -608,11 +608,26 @@
 
             </li>
 
+              <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">UX UI designing</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
+
           </ul>
 
         </section>
         <section>
+          <button>
           <a href="./assets/KanishaBhojak.pdf"> Kanisha Bhojak</a>
+           </button>
         </section>
 
       </article>
