--- a/Portfolio-Kanisha/index.html
+++ b/Portfolio-Kanisha/index.html
@@ -536,13 +536,12 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">UX/UI Designer</h4>
 
-              <span>2020 — 2021</span>
+              <span>July 2021 – February 2023 </span>
 
               <p class="timeline-text">
-                Designed and developed responsive websites, focusing on user-friendly interfaces, front-end development, and enhancing user experience through creative design solutions.
-              </p>
+               Designed and optimized user interfaces for a fantasy sports platform, improving user retention by 25%. • Conducted user research and usability testing to identify pain points and enhance overall user satisfaction. • Collaborated with the development team to ensure seamless implementation of designs using Agile methodologies. • Created prototypes and wireframes using tools like Figma and Adobe XD to visualize design concepts. 
 
             </li>
 
