--- a/Portfolio-Kanisha/index.html
+++ b/Portfolio-Kanisha/index.html
@@ -717,6 +717,21 @@
               <p class="project-category">Web development</p>
              </a>
              </li>
+            
+            <li class="project-item  active" data-filter-item data-category="web development">
+             <a href="https://pastamaking123.netlify.app/">
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+
+                </div>
+                <img src="./assets/images/cafe.png" alt="cafe" loading="lazy">
+               
+              </figure>
+              <h3 class="project-title">Cafe</h3>
+              <p class="project-category">Web development</p>
+             </a>
+             </li>
 
              <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
