--- a/Portfolio-Kanisha/index.html
+++ b/Portfolio-Kanisha/index.html
@@ -728,7 +728,7 @@
                 <img src="./assets/images/cafe.png" alt="cafe" loading="lazy">
                
               </figure>
-              <h3 class="project-title">Cafe</h3>
+              <h3 class="project-title">Past Game</h3>
               <p class="project-category">Web development</p>
              </a>
              </li>
